--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "auth0-account-link-extension",
+  "name": "auth0-account-link-extension-saltuk",
   "version": "2.7.0",
-  "description": "Auth0 Account Link Extension",
+  "description": "Auth0 Account Link Extension Saltuk",
   "main": "index.js",
   "engines": {
     "node": ">=6.9"
@@ -13,7 +13,7 @@
     "lint": "eslint .",
     "serve:dev": "gulp run",
     "client:build": "minify --clean --output dist/assets/link.$npm_package_version.min.css public/css/link.css && minify --clean --output dist/assets/admin.$npm_package_version.min.css public/css/admin.css",
-    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-account-link.extension.$npm_package_version.js ./build/bundle.js",
+    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-account-link-saltuk.extension.$npm_package_version.js ./build/bundle.js",
     "build": "yarn run client:build && yarn run extension:build"
   },
   "author": "Auth0",
